canvas exists now

--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,10 @@
 		  </div>
 	  </div>
 
+	  <div class="canvas-test">
+		  <gt-drawing width="640" height="480"></gt-drawing>
+	  </div>
+
       <div class="row marketing">
         <div class="col-lg-6">
           <h4>HTML5 Boilerplate</h4>
@@ -100,6 +104,7 @@
     
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
+	<script src="scripts/drawing.js"></script>
     <!-- endbuild -->
   </body>
 </html>
