--- a/app/index.html
+++ b/app/index.html
@@ -103,6 +103,8 @@
     <!-- endbuild -->
     
     <!-- build:js scripts/main.js -->
+    <script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script>
+    <script src="scripts/sc.js"></script>
     <script src="scripts/main.js"></script>
 	<script src="scripts/drawing.js"></script>
     <!-- endbuild -->
