--- a/app/index.html
+++ b/app/index.html
@@ -100,6 +100,7 @@
 	<script src="scripts/drawing.js"></script>
 	<script src="scripts/soundCloudSearchService.js"></script>
 	<script src="scripts/MusicSearchCtrl.js"></script>
+	<script src="scripts/playButton.js"></script>
     <!-- endbuild -->
   </body>
 </html>
