--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
         <h3 class="text-muted">temp</h3>
       </div>
 
-      <div ng-include="'templates/musicSearch.html'"/>
+      <div ng-include="'templates/musicSearch.html'"></div>
 
 	  <div class="canvas-test">
 		  <gt-drawing width="640" height="480"></gt-drawing>
