--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/angular/angular.js"></script>
+    <script src="/bower_components/angular-route/angular-route.js"
     <!-- endbower -->
     <!-- endbuild -->
     
@@ -83,7 +84,7 @@
     
     <!-- build:js scripts/main.js -->
     <script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script>
-    <script src="scripts/sc.js"></script>
+    <!--<script src="scripts/sc.js"></script>-->
     <script src="scripts/main.js"></script>
 	<script src="scripts/drawing.js"></script>
 	<script src="scripts/soundCloudSearchService.js"></script>
