--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,7 @@
     <script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script>
     <!--<script src="scripts/sc.js"></script>-->
     <script src="scripts/main.js"></script>
+    <script src="scripts/router.js"></script>
 	<script src="scripts/drawing.js"></script>
 	<script src="scripts/soundCloudSearchService.js"></script>
 	<script src="scripts/MusicSearchCtrl.js"></script>
