--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,8 @@
       </div>
       <div ng-include="'templates/musicSearch.html'"></div>
 
+      <div ng-view></div>
+
 	  <div class="canvas-test">
 		  <gt-drawing width="640" height="480"></gt-drawing>
 	  </div>
