--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,8 @@
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
 
+    <script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script>
+
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
@@ -86,11 +88,10 @@
     <script src="/bower_components/bootstrap/js/collapse.js"></script>
     <script src="/bower_components/bootstrap/js/tab.js"></script>
     <!-- endbuild -->
-    
     <!-- build:js scripts/main.js -->
-    <script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script>
     <!--<script src="scripts/sc.js"></script>-->
     <script src="scripts/main.js"></script>
+    <script src="scripts/sc.js"></script>
     <script src="scripts/router.js"></script>
 	<script src="scripts/drawing.js"></script>
 	<script src="scripts/soundCloudService.js"></script>
