--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,7 @@
     <script src="scripts/sc.js"></script>
     <script src="scripts/router.js"></script>
 	<script src="scripts/drawing.js"></script>
+    <script src="scripts/spotifyService.js"></script>
 	<script src="scripts/soundCloudService.js"></script>
 	<script src="scripts/MusicSearchCtrl.js"></script>
 	<script src="scripts/playButton.js"></script>
