--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-route/angular-route.js"></script>
     <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
-
+    <script src="/bower_components/angular-resource/angular-resource.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
@@ -93,6 +93,7 @@
     <script src="scripts/main.js"></script>
     <script src="scripts/sc.js"></script>
     <script src="scripts/router.js"></script>
+    <script src="scripts/playlist.js"></script>
 	<script src="scripts/drawing.js"></script>
     <script src="scripts/spotifyService.js"></script>
 	<script src="scripts/soundCloudService.js"></script>
