uploads working to s3 (requires env variables)

--- a/app/index.html
+++ b/app/index.html
@@ -100,6 +100,7 @@
 	<script src="scripts/MusicSearchCtrl.js"></script>
 	<script src="scripts/playButton.js"></script>
 	<script src="scripts/imageService.js"></script>
+	<script src="scripts/dataURItoBlob.js"></script>
 	<script src="scripts/UploadPhotoCtrl.js"></script>
     <!-- endbuild -->
   </body>
