--- a/app/index.html
+++ b/app/index.html
@@ -102,6 +102,7 @@
 	<script src="scripts/imageService.js"></script>
 	<script src="scripts/dataURItoBlob.js"></script>
 	<script src="scripts/UploadPhotoCtrl.js"></script>
+	<script src="scripts/CustomizeCtrl.js"></script>
     <!-- endbuild -->
   </body>
 </html>
