--- a/app/index.html
+++ b/app/index.html
@@ -42,9 +42,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="index.php">Search</a></li>
-                    <li><a href="about.php">Your Mixed Tapes</a></li>
-                    <li><a href="about.php">Create Account</a></li>
+                    <li><a href="index.php"> <span class="glyphicon glyphicon-search" aria-hidden="true"></span>Search</a></li>
+                    <li><a href="about.php"> <span class="glyphicon glyphicon-music" aria-hidden="true"> </span>Your Mixed Tapes</a></li>
+                    <li><a href="about.php"> <span class="glyphicon glyphicon-user" aria-hidden="true"> </span>Create Account</a></li>
                 </ul>
             </div>
         </div>
