--- a/app/index.html
+++ b/app/index.html
@@ -78,10 +78,13 @@
     <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="/bower_components/lodash/lodash.js"></script>
     <script src="/bower_components/angular-resource/angular-resource.js"></script>
+	<script src="/bower_components/angular-animate/angular-animate.js"></script>
+	<script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
     <!-- build:js scripts/plugins.js -->
+	<!--
     <script src="/bower_components/bootstrap/js/affix.js"></script>
     <script src="/bower_components/bootstrap/js/alert.js"></script>
     <script src="/bower_components/bootstrap/js/dropdown.js"></script>
@@ -94,6 +97,7 @@
     <script src="/bower_components/bootstrap/js/scrollspy.js"></script>
     <script src="/bower_components/bootstrap/js/collapse.js"></script>
     <script src="/bower_components/bootstrap/js/tab.js"></script>
+	-->
     <!-- endbuild -->
     <!-- build:js scripts/main.js -->
     <!--<script src="scripts/sc.js"></script>-->
