fix load bearing comment

--- a/app/index.html
+++ b/app/index.html
@@ -12,10 +12,10 @@
     <!-- build:css styles/vendor.css -->
     <!-- endbuild -->
 
-    <link rel="stylesheet" href="/styles/bootstrap.css" />
 
     <!-- build:css styles/main.css -->
-    <link rel="stylesheet" href="/styles/main.css">
+      <link rel="stylesheet" href="styles/bootstrap.css" />
+      <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
     
     <!-- build:js scripts/vendor/modernizr.js -->
