--- a/app/index.html
+++ b/app/index.html
@@ -114,6 +114,7 @@
 	<script src="scripts/dataURItoBlob.js"></script>
 	<script src="scripts/UploadPhotoCtrl.js"></script>
 	<script src="scripts/CustomizeCtrl.js"></script>
+	<script src="scripts/ChoosePhotoCtrl.js"></script>
     <!-- endbuild -->
   </body>
 </html>
