--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,9 @@
 
     <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
         <div class="container">
+            <a class="navbar-brand" href="#">
+                <img alt="Rewind" src="images/rewind_logo.png" style="width:120px;">
+            </a>
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
