Allow you to pick a title

--- a/app/index.html
+++ b/app/index.html
@@ -111,6 +111,7 @@
 	<script src="scripts/drawing.js"></script>
     <script src="scripts/spotifyService.js"></script>
 	<script src="scripts/soundCloudService.js"></script>
+    <script src="scripts/ChooseTitleCtrl.js"></script>
 	<script src="scripts/MusicSearchCtrl.js"></script>
 	<script src="scripts/playButton.js"></script>
 	<script src="scripts/imageService.js"></script>
