Work on styles for create playlist page

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,9 @@
       <link rel="stylesheet" href="styles/bootstrap.css" />
       <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-    
+
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
+
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
