--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
 
-    <meta name="viewport" content="initial-scale=.8, maximum-scale=2, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, user-scalable=yes">
     <title>Rewind</title>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
