playlist open page

--- a/app/index.html
+++ b/app/index.html
@@ -46,8 +46,8 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="/"> <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home </a></li>
-                    <li><a href="#!/playlists"> <span class="glyphicon glyphicon-music" aria-hidden="true"> </span> Your Mixed Tapes</a></li>
-                    <li><a href="account"> <span class="glyphicon glyphicon-user" aria-hidden="true"> </span> Account</a></li>
+                    <li><a href="#!/playlists/"> <span class="glyphicon glyphicon-music" aria-hidden="true"> </span> Your Mixed Tapes</a></li>
+                    <li><a href="#!/account"> <span class="glyphicon glyphicon-user" aria-hidden="true"> </span> Account</a></li>
                 </ul>
             </div>
         </div>
